--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,48 @@
     transform: rotate(360deg);
   }
 }
+/**************************************Registration form**********************************/
+form.Reg_form {
+  display: flex;
+  flex-direction: column;
+  width: 68rem;
+  margin-left: 21rem;
+  margin-top: 11rem;
+}
+.title {
+  display: flex;
+  margin-left: 3.8rem; 
+   font-size: 1.8rem;
+}
+.headline {
+  display: flex;
+  margin-left: 3.8rem; 
+   font-size: 1.5rem;
+}
+.reg_name{
+  display: flex;
+  justify-content: space-evenly
+}
+.reg_pass{
+  display: flex;
+  justify-content: space-evenly
+}
+.Reg_inner_div {
+  width: 41rem;
+  line-height: 2.1rem;
+}
+.button-11{
+  display: flex;
+  justify-content: space-evenly
+}
+.userName {
+  display: flex;
+  justify-content: center;
+}
+button.button-1 {
+  color: royalblue;
+  font-size: 1.2rem;
+}
+button.button-2 {
+  background-color: royalblue;
+}
