--- a/src/App.css
+++ b/src/App.css
@@ -89,10 +89,10 @@ button.button-2 {
 /********************************DASHBOARD COMPONENT***********************************************************************/
 
 .navbar {
-  height: 5.8rem;
+  height: 4.5rem;
   box-shadow: 0 0 12px;
   position: relative;
-  width: 107rem;
+  width: 80rem;
 }
 .button.btn.button {
   box-shadow: 0 0 5px;
@@ -118,7 +118,7 @@ button.btn.button1 {
 .service_check {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 .card.basic_card {
   width: 14rem;
@@ -142,7 +142,7 @@ button.btn.button1 {
 .servive_cards {
   display: flex;
   justify-content: space-evenly;
-  padding-top: 6rem;
+  /* padding-top: 6rem; */
   /* overflow: hidden; */
 }
 .card-header.service_ {
